feat: 의존성 주입 프레임워크 Configuration 로드 시 인자로 생성된 의존 인스턴스 주입이 가능하도록 변경